bpk-lib/crates/macbat/macros/tests/trybuild_negative/variant_inventory_on_struct.rs
use macbat::VariantInventory;
#[derive(VariantInventory)]
struct S {
    a: u8,
}
fn main() {}
